--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <center>
         <h1 id="head">AI Object Finder</h1>
         <h3 id="instruction">The input name which you will give should match the preset name in CoCo model then only it will be detected🤷‍♂️.</h3>
+            <h1>Object Name</h1>
+            <input id="input" type="text"></input>
         <button id="start" class="btn btn-success" onclick="start()">Start</button>
         <h1 id="status_detected"></h1>
         <h1 id="status_found"></h1>
